--- a/contactform_server/.env
+++ b/contactform_server/.env
@@ -1,3 +1,3 @@
-EMAIL_USER='msandycrime@gmail.com'
-EMAIL_PASS='bbgd wxtb jste dqap'
+EMAIL_USER='msandycrime@gmail.com'  //EmailId
+EMAIL_PASS='bbgd wxtb jste dqap' //App password
 PORT=3001
